[package]

name = "eve"
version = "0.0.1"
authors = [
    "Jamie Brandon <jamie@scattered-thoughts.net>",
    "Corey Montella <corey@kodowa.com>",
    ]

[dependencies]
rand = "*"
time = "*"
rustc-serialize = "*"
hyper = "*"
cookie = "*"
url = "*"
mime = "*"
cbor = "*"
conduit-mime-types = "*"
websocket = "*"
bit-set = "*"
getopts = "*"
cpython = { git = "https://github.com/dgrunwald/rust-cpython.git" }

[profile.release]
debug = true
